--- a/OOJS1.html
+++ b/OOJS1.html
@@ -25,23 +25,38 @@
 </body>
 <script>
 class Shape {
-  constructor(name, sides, sideLength){
-    this.name = name;
-    this.sides = sides;
-    this.sideLength = sideLength;
+    constructor(name, sides, sideLength){
+      this.name = name;
+      this.sides = sides;
+      this.sideLength = sideLength;
+    }
+  
+    calcPerimeter() {
+      const perimeter = this.sides * this.sideLength;
+      console.log(`El perÃ­metro de ${this.name} es ${perimeter}`);
+    }
   }
 
-  calcPerimeter() {
-    const perimeter = this.sides * this.sideLength;
-    console.log(`El perímetro de ${this.name} es ${perimeter}`);
+  class Square extends Shape {
+
+    constructor(sideLength) {
+        super("square", 4, sideLength);
+    }
+    
+    calcArea() {
+        const area = this.sideLength ** 2;
+        console.log(`El area del ${this.name} es ${area}`);
+    }
   }
-}
+  
+  const square = new Square(6);
+  square.calcPerimeter();
+  square.calcArea();
 
-const square = new Shape("square", 4, 5);
-square.calcPerimeter();
-
+</script>
+</html>
 const triangle = new Shape("triangle", 3, 3);
-triangle.calcPerimeter(); // Llamada corregida para calcular el perímetro del triángulo.
+triangle.calcPerimeter(); 
 
 </script>
 </html>
